--- a/administration/css/web.css
+++ b/administration/css/web.css
@@ -1,4 +1,47 @@
 @CHARSET "UTF-8";
 
-.hidden		{ display : none; }
-.error		{ color: red; }
+html,body               {margin: 0;padding: 0;font-family: "Arial CE",Arial,"Helvetica CE",Helvetica,sans-serif;color:#000000;background:#FFFFFF}
+html                    {font-size:106.5%}
+body                    {font-size:76.5%}
+table                   {font-size:100%}
+a                       {color:#B11A6C}
+a:hover                 {color:#B11A6C;}
+a:visited               {color:#B11A6C}
+img                     {border:0}
+p,img,table,tr,th,td,form,fieldset,dl,dt,dd,h1,h2,h3,h4,h5  {border: 0px none;margin: 0px;padding: 0px}
+ul,li,ol                {padding: 0px;margin: 0px;list-style-type: none}
+h1,h2,h3,h4,h5          {font-size:150%;font-weight:normal}
+
+.hidden                 { display : none; }
+.clear                  { clear: both; }
+.error          		{ color: red; background: none repeat scroll 0 0 #7B2206; clear: both; }
+
+body, html              { background: none repeat scroll 0 0 #BE1853; color: white;}
+
+body                    { text-align:center;}
+body div                { text-align:left; }
+
+#header                 { font-size: 170%; padding: 0.5em 0.3em; background: none repeat scroll 0 0 #6C052A; color: white; font-family: 'Droid Sans',"Arial CE",Arial,"Helvetica CE",Helvetica,sans-serif;}
+
+#menu-box               { background: none repeat scroll 0 0 #F29B99; margin-bottom: 2em; }
+#menu-box ul            { margin: 0 0.3em; }
+#menu-box li            { display: block; float: left; margin: 0.5em 0; }
+#menu-box a             { margin: 0 0.5em;}
+#menu-box a:hover       {color:#F29B99; background-color: #B11A6C;}
+
+#login-box              { margin: 150px auto; width: 300px; border: 1px dotted white;  padding: 0.3em;}
+fieldset legend         { font-weight: bold; font-size: 130%; margin-bottom: 0.3em; }
+fieldset p span         { width: 100px; display: block; float: left; text-align: right; margin-right: 1em; clear: left;}
+fieldset p input        { display: block; float: left; margin-bottom: 0.1em;}
+fieldset p span.info    { display: inline; clear: none; width: auto; text-align: left; margin-left: 1em; }
+
+
+#url-list-box table     { border-collapse: collapse; margin: 0 0 1em 0.5em; }
+#url-list-box th        { font-weight: bold; background-color: #6C052A; }
+#url-list-box td, #url-list-box th        { padding: 0.2em 0.2em; border-bottom: 1px solid #F29B99; }
+#url-list-box a         { color: #6C052A; }
+
+
+#statistics-box         { position: absolute; background-color: #6C052A; padding: 0.6em; }
+
+#throbber-box           { margin: 300px auto; width: 32px; }
